whoa-playing-editable spacing fix

--- a/client/devel.import.less
+++ b/client/devel.import.less
@@ -221,6 +221,8 @@ button {
   input:checked+label {
     text-decoration: line-through;
   }
+
+  label {margin-bottom: 0;}
 }
 
 .comments {
